--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="utf-8" />
+		<title>2048</title>
+		<link rel="stylesheet" href="css/2048.css" />
+		<script type="text/javascript" src="js/jquery-3.0.0.js" ></script>
+		<script type="text/javascript" src="js/support.js" ></script>
+		<script type="text/javascript" src="js/animation.js" ></script>
+		<script type="text/javascript" src="js/main.js" ></script>
+		<script type="text/javascript" src="js/game.js" ></script>
+	</head>
+	<body>
+		<header>
+			<h2>2048</h2>
+			<a href="javascript:newgame();" id="newgamebutton">New Game</a>
+			<p>score: <span id="score">0</span></p>
+		</header>
+		<div id="grid-container">
+			<div id="grid-cell-0-0" class="grid-cell"></div>
+			<div id="grid-cell-0-1" class="grid-cell"></div>
+			<div id="grid-cell-0-2" class="grid-cell"></div>
+			<div id="grid-cell-0-3" class="grid-cell"></div>
+			<div id="grid-cell-1-0" class="grid-cell"></div>
+			<div id="grid-cell-1-1" class="grid-cell"></div>
+			<div id="grid-cell-1-2" class="grid-cell"></div>
+			<div id="grid-cell-1-3" class="grid-cell"></div>
+			<div id="grid-cell-2-0" class="grid-cell"></div>
+			<div id="grid-cell-2-1" class="grid-cell"></div>
+			<div id="grid-cell-2-2" class="grid-cell"></div>
+			<div id="grid-cell-2-3" class="grid-cell"></div>
+			<div id="grid-cell-3-0" class="grid-cell"></div>
+			<div id="grid-cell-3-1" class="grid-cell"></div>
+			<div id="grid-cell-3-2" class="grid-cell"></div>
+			<div id="grid-cell-3-3" class="grid-cell"></div>
+			
+		</div>
+		
+	</body>
+</html>
 
